fix: fix height for search result wrap

--- a/react/src/components/guestLayout.module.scss
+++ b/react/src/components/guestLayout.module.scss
@@ -117,6 +117,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      min-height: 100vh;
     }
   }
 
