--- a/react/src/components/userLayout.module.scss
+++ b/react/src/components/userLayout.module.scss
@@ -116,6 +116,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      min-width: 100vh;
     }
   }
 
